# coex_sample

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sample.yaml
src/: bt_main.c  bt_main.h  cmds.c  main.c
